feat(locksmith): Add support for dynamic pricing
