# locksmith/src/controllers/purchaseController.ts
@@ -18,6 +18,19 @@ import networks from '@unlock-protocol/networks'
 import { KeySubscription } from '../models'
 import config from '../config/config'
 import { LOCKS_WITH_DISABLED_CLAIMS } from './v2/claimController'
+import { z } from 'zod'
+
+const PaymentCaptureBody = z.object({
+  data: z.array(z.string()).default([]).optional(),
+  lock: z.string().transform((item) => Normalizer.ethereumAddress(item)),
+  network: z.number(),
+  userAddress: z.string().transform((item) => Normalizer.ethereumAddress(item)),
+  recipients: z.array(
+    z.string().transform((item) => Normalizer.ethereumAddress(item))
+  ),
+  referrers: z.array(z.string()).default([]).optional(),
+  paymentIntent: z.string(),
+})
 
 export class PurchaseController {
   // Provides info on the purchaser addresses. This is used for ticket verification as well to verify who signed the QR code.
@@ -121,12 +134,15 @@ export class PurchaseController {
     request: SignedRequest,
     response: Response
   ): Promise<any> {
-    const { network, recipients, paymentIntent: paymentIntentId } = request.body
-    const userAddress = Normalizer.ethereumAddress(request.body.userAddress)
-    const lockAddress = Normalizer.ethereumAddress(request.body.lock)
-    const normalizedRecipients: string[] = recipients.map((address: string) =>
-      Normalizer.ethereumAddress(address)
-    )
+    const {
+      network,
+      recipients,
+      paymentIntent: paymentIntentId,
+      data,
+      referrers,
+      lock: lockAddress,
+      userAddress,
+    } = await PaymentCaptureBody.parseAsync(request.body)
 
     const dispatcher = new Dispatcher()
     const hasEnoughToPayForGas = await dispatcher.hasFundsForTransaction(
@@ -138,11 +154,8 @@ export class PurchaseController {
       })
     }
 
-    const soldOut = await isSoldOut(
-      lockAddress,
-      network,
-      normalizedRecipients.length
-    )
+    const soldOut = await isSoldOut(lockAddress, network, recipients.length)
+
     if (soldOut) {
       // TODO: Cancel authorization
       return response.status(400).send({
@@ -159,6 +172,8 @@ export class PurchaseController {
           network,
           paymentIntentId,
           recipients,
+          referrers: referrers || [],
+          data: data || [],
         })
 
       const fulfillmentDispatcher = new Dispatcher()
@@ -233,6 +248,9 @@ export class PurchaseController {
 
       return
     } catch (error) {
+      if (response.headersSent) {
+        return
+      }
       logger.error('There was an error when capturing payment', error)
       return response.status(400).send({ error: error.message })
     }
