# locksmith/src/controllers/v2/purchaseController.ts
@@ -20,6 +20,8 @@ const createPaymentIntentBody = z.object({
   stripeTokenId: z.string(),
   pricing: z.number(),
   recurring: z.number().optional(),
+  referrers: z.array(z.string()).optional().default([]),
+  data: z.array(z.string()).optional().default([]),
 })
 
 const Processor = new PaymentProcessor(config.stripeSecret!)
@@ -75,7 +77,7 @@ export const createPaymentIntent: RequestHandler = async (
   const lockAddress = Normalizer.ethereumAddress(request.params.lockAddress)
   const network = Number(request.params.network)
   const userAddress = Normalizer.ethereumAddress(request.user!.walletAddress)
-  const { recipients, recurring, stripeTokenId, pricing } =
+  const { recipients, recurring, stripeTokenId, pricing, data, referrers } =
     await createPaymentIntentBody.parseAsync(request.body)
 
   const soldOut = await isSoldOut(lockAddress, network, recipients.length)
@@ -128,7 +130,9 @@ export const createPaymentIntent: RequestHandler = async (
     pricing,
     network,
     stripeConnectApiKey,
-    recurring
+    recurring,
+    data,
+    referrers
   )
   return response.send(paymentIntentDetails)
 }
